--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -46,8 +46,8 @@
   },
   "404": {
     "title": "You have found a secret place",
-    "description": "Unfortunately, this is only a 404 page. You may have mistyped the address, or the page has been moved to another URL.",
-    "button": "Take me back to home page"
+    "description": "Unfortunately, you may have mistyped the address the content has been moved to another URL.",
+    "button": "Back to Home"
   },
   "500": {
     "title": "Something bad just happened...",
