--- a/src/data/blog/en/nvim.mdx
+++ b/src/data/blog/en/nvim.mdx
@@ -1,9 +1,9 @@
 ---
-title: Config your Neovim 
+title: Config your Neovim
 date: '2022-10-05T00:00:00Z'
 modifiedTime: '2022-10-05T00:00:00Z'
 summary: Neovim for rust, c++, typescript development
-image: 'nvim/cover.png'
+image: 'nvim/cover.webp'
 ---
 
 ## Introduction to Neovim
@@ -15,4 +15,4 @@ Neovim is a wonderful text editor, why can't I reload. I see this is an awesome 
 [PHP - Wikipedia, the free encyclopedia](https://en.wikipedia.org/wiki/PHP)  
 [Camel case - Wikipedia, the free encyclopedia](https://en.wikipedia.org/wiki/Camel_case)  
 [Snake case - Wikipedia, the free encyclopedia](https://en.wikipedia.org/wiki/Snake_case)  
-[String Operators](https://www.php.net/manual/en/language.operators.string.php)  
+[String Operators](https://www.php.net/manual/en/language.operators.string.php)
