--- a/src/data/blog/en/nvim.mdx
+++ b/src/data/blog/en/nvim.mdx
@@ -6,9 +6,12 @@ summary: Neovim for rust, c++, typescript development
 image: 'nvim/cover.webp'
 ---
 
+
 ## Introduction to Neovim
 
 Neovim is a wonderful text editor, why can't I reload. I see this is an awesome plugin for me. Yes, it is
+
+<div style={{padding: "50px"}}>Not gud</div>
 
 ## References
 
