--- a/src/data/blog/en/rust_01.mdx
+++ b/src/data/blog/en/rust_01.mdx
@@ -67,7 +67,8 @@ At least multiple types of strings in Rust.
 
 ### Ownership
 
-Ownership is what makes Rust compiler run on steroids. It's one of the safest system programming languages out there. There are 3 rules regarding ownership:
+Ownership is what makes Rust compiler run on steroids, making it one of the safest system programming languages out there. 
+There are 3 rules regarding ownership:
 
 1. Each value has an owner
 2. Only one owner - it can be borrowed.
@@ -75,17 +76,106 @@ Ownership is what makes Rust compiler run on steroids. It's one of the safest sy
 
 An example of ownership:
 
-```rust
+```rs
 int main() {
-  let s1 = String::from("hello");
-  let s2 = s1; // Value is moved here
+  let s1 = String::from("hello"); // Initialize and given ownership of this string
+  let s2 = s1; // Value is moved here // ownership is transferred to s2.
   // println!("{}", s1); // Invalid since s2 ownerd the value now
-  print("{}", s2); // This is ok
+  println!("{}", s2); // This is ok
 }
 ```
 
-By applying
+### Pointer, Box & Smart pointers
+
+All values in Rust are stack allocated by default (continous/linear, high-speed access, [more info](https://www.guru99.com/stack-vs-heap.html)). 
+Nevertheless, since the stack is fixed size so compilation wouldn't work for recusive data structures such as Linkedlists, Array, etc.. where 
+data size is unknown at compilation time. 
++ Values can be boxed and allocates on the heap with `std::Box<T>`, where dynamic memory 
+allocation can happen. 
++ A box is a smart pointer to a heap value of type `T`. And a smart pointer is a pointer with additional features like automatic 
+memory management or bounds checking
+  - Conceptualize by C++, inspired from Simula67 `element` - a pointer without `null` ([history](https://en.wikipedia.org/wiki/Smart_pointer#history)). 
+  - For example, in C++11, `std::unique_ptr<Type> Func()` makes explicit that caller should takes ownership of the result, and C++ runtime ensures that memory will be reclaimed automatically. 
+  - <strong>For Rust, </strong> a smart pointer is defined mostly as a struct that implements `Deref` - , `Drop` traits. The concept is well described in [official book](https://doc.rust-lang.org/book/ch15-00-smart-pointers.html). A [well explanation](https://youtu.be/KYJ95TxEC18)
+
+An example of `Box` from the book, noticing box always takes 8 bytes. 
+
+```rs
+use std::mem;
+
+#[allow(dead_code)]
+#[derive(Debug, Clone, Copy)]
+struct Point {
+    x: f64,
+    y: f64,
+}
+
+// A Rectangle can be specified by where its top left and bottom right corners are in space
+#[allow(dead_code)]
+struct Rectangle {
+    top_left: Point,
+    bottom_right: Point,
+}
+
+fn origin() -> Point {
+    Point { x: 0.0, y: 0.0 }
+}
+
+fn boxed_origin() -> Box<Point> {
+    // Allocate this point on the heap, and return a pointer to it
+    Box::new(Point { x: 0.0, y: 0.0 })
+}
+
+fn main() {
+    // Stack allocated variables
+    let point: Point = origin();
+    let rectangle: Rectangle = Rectangle {
+        top_left: origin(),
+        bottom_right: Point { x: 3.0, y: -4.0 }
+    };
+
+    // Heap allocated rectangle
+    let boxed_rectangle: Box<Rectangle> = Box::new(Rectangle {
+        top_left: origin(),
+        bottom_right: Point { x: 3.0, y: -4.0 },
+    });
+
+    // The output of functions can be boxed
+    let boxed_point: Box<Point> = Box::new(origin());
+
+    // Double indirection
+    let box_in_a_box: Box<Box<Point>> = Box::new(boxed_origin());
+
+    println!("Point occupies {} bytes on the stack",
+             mem::size_of_val(&point));
+    println!("Rectangle occupies {} bytes on the stack",
+             mem::size_of_val(&rectangle));
+
+    // box size == pointer size
+    println!("Boxed point occupies {} bytes on the heap",
+             mem::size_of_val(&boxed_point));
+    println!("Boxed rectangle occupies {} bytes on the heap",
+             mem::size_of_val(&boxed_rectangle));
+    println!("Boxed box occupies {} bytes on the heap",
+             mem::size_of_val(&box_in_a_box));
+
+    // Copy the data contained in `boxed_point` into `unboxed_point`
+    let unboxed_point: Point = *boxed_point;
+    println!("Unboxed point occupies {} bytes on the stack",
+             mem::size_of_val(&unboxed_point));
+}
+
+Output >>
+
+Point occupies 16 bytes on the stack
+Rectangle occupies 32 bytes on the stack
+Boxed point occupies 8 bytes on the heap
+Boxed rectangle occupies 8 bytes on the heap
+Boxed box occupies 8 bytes on the heap
+Unboxed point occupies 16 bytes on the stack
+```
 
 ## References
 
 - [O'Reilly rust crash course](https://learning.oreilly.com/videos/ultimate-rust-crash/9781800563902/)
+
