--- a/posts/blog/article/en/edge_vs_cloud.mdx
+++ b/posts/blog/article/en/edge_vs_cloud.mdx
@@ -2,7 +2,7 @@
 title: Edge vs Cloud computing
 date: '2022-10-05T00:00:00Z'
 modifiedTime: '2022-11-08T00:00:00Z'
-summary: ERC777 - tokens, ERC20, and beyond
+summary: Cloud vs Edge
 image: 'nvim/cover.webp'
 ---
 
@@ -43,6 +43,6 @@ But edge computing, when used as part of manufacturing, mining, processing, or s
 
 For example:
 
-+ Home automation is generally an IoT exercise. Your phone and smart home devices (light bulbs, thermostats, and outlets) are all IoT devices, because they simply send data—and execution decisions—back and forth (sometimes through a cloud). Neither your phone nor smart devices are processing the data they collect.
+- Home automation is generally an IoT exercise. Your phone and smart home devices (light bulbs, thermostats, and outlets) are all IoT devices, because they simply send data—and execution decisions—back and forth (sometimes through a cloud). Neither your phone nor smart devices are processing the data they collect.
 
-+ Satellite imagery—like the kind being used on the International Space Station (ISS)— is an edge computing exercise. Edge devices physically located on the ISS are running containerized analytical code as a single-node Red Hat<sup>®</sup> OpenShift<sup>®</sup> cluster that connects to IBM Cloud on Earth. Only images that are worth transfering are sent down to the ground. Edge computing is a necessary step here because the sheer volume of data collected is too much to send to an Earth-based cloud.
+- Satellite imagery—like the kind being used on the International Space Station (ISS)— is an edge computing exercise. Edge devices physically located on the ISS are running containerized analytical code as a single-node Red Hat<sup>®</sup> OpenShift<sup>®</sup> cluster that connects to IBM Cloud on Earth. Only images that are worth transfering are sent down to the ground. Edge computing is a necessary step here because the sheer volume of data collected is too much to send to an Earth-based cloud.
