--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -25,7 +25,7 @@
     "switchLanguage": "Switch language"
   },
   "Seo": {
-    "defaultDesc": "小康's Blog and personal website",
+    "defaultDesc": "Phil's Blog and personal website",
     "dashboardDesc": "This is my personal dashboard, built with Next.js API routes deployed as serverless functions. I use this dashboard to track various metrics across platforms like YouTube, GitHub, and more.",
     "projectsDesc": "Projects on web development",
     "guestbookDesc": "Sign my guestbook and share your idea."
