re-organize content layer

--- a/mdx_contents/blog/smart_contract/reentrance_attack.mdx
+++ b/mdx_contents/blog/smart_contract/reentrance_attack.mdx
@@ -187,6 +187,7 @@ For the above example, The execution stack will be:
 <Image
   src="/blogs/blockchain/reentrance/reentrance_stack.webp"
   alt="Execution stack"
+  wrapperClassName="py-2"
   caption="Execution stack when performing the above attack"
   width="1457"
   height="678"
