update blog references

--- a/mdx_contents/blog/smart_contract/private_storage.mdx
+++ b/mdx_contents/blog/smart_contract/private_storage.mdx
@@ -133,6 +133,6 @@ With this setup, the contract owner will store their signature (secret key) offc
 
 # References
 
-1. [Ethernaut Level 12](https://ethernaut.openzeppelin.com/404)
+1. [Ethernaut Level 12](https://ethernaut.openzeppelin.com/level/12)
 2. [Ethereum storage layout](https://ethereum.org/en/developers/docs/smart-contracts/anatomy/#data)
 3. [Ethereum OpCodes](https://ethereum.org/en/developers/docs/evm/opcodes/)
