update blog references

--- a/mdx_contents/blog/smart_contract/reentrance_attack.mdx
+++ b/mdx_contents/blog/smart_contract/reentrance_attack.mdx
@@ -313,3 +313,8 @@ This method involves separating the contract's functions into three parts:
 
 and ensuring that these parts are executed in a correct order. While more efficient than the re-entrancy guard, 
 this solution requires a more sophisticated understanding of smart contract security and can be challenging to implement correctly.
+
+# References
+
+1. [Ethernaut Level 10](https://ethernaut.openzeppelin.com/level/10)
+2. [Openzeppelin's note on Re-entrancy](https://blog.openzeppelin.com/reentrancy-after-istanbul/)
